traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:1: warning: enclosing method positionFinale has result type Unit: return value discarded
override def run() {def positionFinale() {if (estFaceMur()&&getDirection()==Direction.EST) {gauche();return estFaceMur()}
                                                                                                     ^Snake:2: error: value OUST is not a member of object plm.universe.Direction
                                           if (estFaceMur()&&getDirection()==Direction.OUST) {droite();return estFaceMur()}
                                                                                       ^Snake:2: warning: enclosing method positionFinale has result type Unit: return value discarded
                                           if (estFaceMur()&&getDirection()==Direction.OUST) {droite();return estFaceMur()}
                                                                                                       ^Snake:4: error: value unary_! is not a member of Unit
                    def marche() {while (!positionFinale) 
                                         ^Snake:5: error: not found: value etDirection
                                  {if (estFaceMur()&&etDirection()==Direction.EST) {gauche();}
                                                     ^Snake:6: error: not found: value etDirection
                                   if (estFaceMur()&&etDirection()==Direction.OUEST) {droite();}
                                                     ^