traversal.snake.Snake.scala.code
override def run() {def positionFinale() {if (estFaceMur()&&getDirection()==Direction.EST) {gauche();return estFaceMur()}
                                           if (estFaceMur()&&getDirection()==Direction.OUST) {droite();return estFaceMur()}
                                          }
                    def marche() {while (!positionFinale) 
                                  {if (estFaceMur()&&etDirection()==Direction.EST) {gauche();}
                                   if (estFaceMur()&&etDirection()==Direction.OUEST) {droite();}
                                   else {avance();}
                                  }
                                 }
}